# Restaurant-Service-App

./: .gitignore  README.md  client.py  docker-compose.yml
Broker/: Broker.sln
Broker/Broker/: Broker.csproj  Broker.http  Dockerfile  Program.cs  StartUp.cs
Broker/Broker/Consumer/: BrokerConsumer.cs
Broker/Broker/Consumer/Messages/: ClientOrder.cs
Broker/Broker/Controllers/: OrdersController.cs
Broker/Broker/Properties/: launchSettings.json
Kitchen/: Dockerfile  Kitchen.csproj  Kitchen.http  Kitchen.sln  Program.cs  Startup.cs
Kitchen/Consumer/: KitchenConsumer.cs
Kitchen/Consumer/Messages/: YourMessage.cs  YourResultMessage.cs
Kitchen/DbServices/: AppDbContext.cs
Kitchen/Properties/: launchSettings.json
Shared/: OrderDTO.cs
backend/: Dockerfile  entrypoint.sh  pyproject.toml
backend/api/: serializers.py  urls.py  views.py
backend/config/: settings.py  urls.py
backend/users/: models.py  serializers.py  urls.py  views.py
backend/users/migrations/: 0001_initial.py
client/: apps.py  models.py  views.py
client/migrations/: 0001_initial.py
pizza_place/: asgi.py  settings.py  urls.py  wsgi.py
