[tool.poetry]
name = "restaurant-service-app"
version = "0.1.0"
description = ""
authors = ["rednek21 <egor.podustov@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
djangorestframework = "^3.15.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
